- Tests added
- Documentation completed

Version 0.1.2
- Bugfix for Windows (Tempfile)
- Regexes optimized (a little bit)
- New class-method MiniExiftool.writable_tags

Version 0.1.1
- Fixing bug [#8073]
  Handling the '-' in tag Self-timer
  Thanks to Eric Young

Version 0.1.0
- New method "revert"
- More tests

Version 0.0.1
- Initial release